Add 'ValidateStaging' stage

--- a/sample-nodejs-service/Dockerfile
+++ b/sample-nodejs-service/Dockerfile
@@ -1,4 +1,7 @@
 FROM node:carbon
+RUN apk add tzdata
+RUN cp /usr/share/zoneinfo/Brazil/East /etc/localtime
+RUN echo "Brazil/East" > /etc/timezone
 WORKDIR /usr/srv/app
 COPY package*.json ./
 RUN npm install
